resolve page moving when page shifting

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -13,7 +13,9 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 
-
+		html {
+			height:100.1%;
+			}
 /*===================================================================================================
 2) Basic styles  (edihted)
 ===================================================================================================*/
